# QLab

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Master Engineering Blueprint_ AFML Implementation Spec.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: ApprovalModal.tsx  EmergencyFlatten.tsx  StrategyTable.tsx  ValidationCharts.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  table.tsx
apps/web/src/hooks/: useControlPlane.ts
apps/web/src/lib/: api.ts  utils.ts
apps/web/tests/e2e/: approval.spec.ts
docs/: AI-First Quant Lab_ AFML Architecture & PRD.md  OPERATIONS_ROADMAP.md
docs/reviews/: Quant Lab Review_ Phase 0-2 Audit.md  Quant Lab Review_ Phase 0-4 Audit.md  Quant Lab Review_ Phase 3 Audit.md  docs_ops_master_operational_roadmap.md  phase0_5_integration_audit.md  phase0_6_validation_audit.md  phase0_8_final_audit.md  phase0_9_final_integration_audit.md  phase0_9_final_polishing_audit.md
docs/specs/: M1_bar_granularity.md  M1_research_harness.md
src/afml/: __init__.py  cli.py
src/afml/config/: __init__.py  assets.py  risk.py  settings.py
src/afml/control_plane/: __init__.py  app.py  config.py  deps.py  routes.py  schemas.py  security.py
src/afml/core/: __init__.py  broker.py  events.py
src/afml/core/registry/: __init__.py  exceptions.py  repository.py  schema.py
src/afml/crypto/: __init__.py  keychain.py  signing.py  totp.py
src/afml/data/: __init__.py  causality.py  ffd.py  ingest.py  integration.py  stationarity.py
src/afml/data/bars/: __init__.py  selector.py  streaming.py  tick_imbalance.py  tick_run.py  time_bars.py
src/afml/execution/: __init__.py  bet_sizing.py  pipeline.py  risk.py
src/afml/execution/brokers/: __init__.py  base.py  mock.py  mt5.py
src/afml/features/: __init__.py  _discretize.py  amihud.py  base.py  corwin_schultz.py  hasbrouck.py  kyle.py  lempel_ziv.py  ofi.py  pipeline.py  roll.py  shannon.py
src/afml/labeling/: __init__.py  brain1.py  orthogonality.py  triple_barrier.py  volatility.py
src/afml/labeling/primary_alphas/: __init__.py  base.py  bollinger.py  cusum.py  donchian.py
src/afml/modeling/: __init__.py  calibration.py  concurrency.py  pipeline.py  sbrf.py  sequential_bootstrap.py
src/afml/monitoring/: __init__.py  chow.py  gsadf.py  pipeline.py  shap_drift.py
src/afml/ops/: __init__.py  health.py
src/afml/research/: __init__.py  artifacts.py  cli.py  diagnostics.py  grids.py  harness.py  objective.py  plateau.py  precompute.py  regimes.py  sweep.py
src/afml/selection/: __init__.py  clustering.py  distance.py  mda.py  pipeline.py  purged_kfold.py  sfi.py
src/afml/validation/: __init__.py  cohort.py  cpcv.py  dsr.py  fwer.py  pbo.py  pipeline.py  target_shuffling.py
tests/: conftest.py
tests/integration/: test_m1_sweep.py  test_phase1_to_4.py  test_phase9_control_plane.py
tests/unit/m0/: conftest.py  test_cli.py  test_health.py
tests/unit/m1/: test_artifacts.py  test_diagnostics.py  test_grids.py  test_objective.py  test_plateau.py  test_regimes.py  test_sweep.py
tests/unit/phase0/: test_broker.py  test_broker_serialization.py  test_broker_throughput.py  test_events.py  test_registry.py
tests/unit/phase1/: conftest.py  test_bar_selector.py  test_causality.py  test_ffd.py  test_ffd_truncation_hash.py  test_ingest.py  test_integration_alignment.py  test_stationarity.py  test_streaming_bars.py  test_tick_imbalance.py  test_tick_run.py  test_time_bars.py
tests/unit/phase2/: conftest.py  test_brain1.py  test_orthogonality.py  test_primary_alpha_registry.py  test_primary_bollinger.py  test_primary_cusum.py  test_primary_donchian.py  test_triple_barrier.py  test_volatility.py
tests/unit/phase3/: conftest.py  test_amihud.py  test_base.py  test_corwin_schultz.py  test_feature_truncation_hash.py  test_hasbrouck.py  test_kyle.py  test_lempel_ziv.py  test_ofi.py  test_pipeline.py  test_roll.py  test_shannon.py
tests/unit/phase4/: conftest.py  test_clustering.py  test_distance.py  test_mda.py  test_mda_circuit_breaker.py  test_pipeline.py  test_purged_kfold.py  test_sfi.py
tests/unit/phase5/: conftest.py  test_calibration.py  test_calibration_purged_cv.py  test_concurrency.py  test_empty_mda_passthrough.py  test_pipeline.py  test_sample_weight_propagation.py  test_sbrf.py  test_sequential_bootstrap.py  test_walk_forward_cv.py  test_weight_normalization.py
tests/unit/phase6/: test_cohort.py  test_cpcv.py  test_dsr.py  test_fwer.py  test_pbo.py  test_pipeline.py  test_target_shuffling.py
tests/unit/phase7/: test_audit_remediation.py  test_bet_sizing.py  test_brokers.py  test_pipeline.py  test_risk.py
tests/unit/phase8/: test_audit_remediation.py  test_chow.py  test_gsadf.py  test_pipeline.py  test_shap_drift.py
tests/unit/phase9/: conftest.py  test_authenticator.py  test_control_plane_api.py  test_final_integration_audit.py  test_final_polishing_audit.py  test_keychain.py  test_signing.py  test_totp.py
