[project]
name = "afml-quant-lab"
version = "0.0.1"
description = "AI-First Quant Lab — AFML Meta-Labeling Trading System with Human-in-the-Loop Control Plane"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "AFML Quant Lab" }]

dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "redis[hiredis]>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "structlog>=24.1",
    "typer>=0.9",
    "rich>=13.7",
    "orjson>=3.9",
]

[project.scripts]
afml = "afml.cli:main"

[dependency-groups]
# Phase 1+ data engineering.
data = [
    "polars>=0.20",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "numba>=0.59",
    "statsmodels>=0.14",
]
# Phase 4+ ML / selection / modeling.
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.44",
    "scipy>=1.12",
]
# Phase 9 control plane.
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyotp>=2.9",
    "cryptography>=42.0",
    "keyring>=24.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.96",
    "fakeredis>=2.21",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    # Phase 9 — FastAPI TestClient transport for the control-plane API tests.
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afml"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "apps/web", "artifacts"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "C4",            # comprehensions
    "UP",            # pyupgrade
    "PL",            # pylint
    "RUF",           # ruff-specific
    "SIM",           # simplify
    "TID",           # tidy imports
    "NPY",           # numpy
    "ASYNC",         # async best-practices
]
ignore = [
    "PLR0913",  # too many arguments — common in scientific signatures
    "PLR2004",  # magic value in comparison — covered by custom audit later
    "E501",     # line length governed by formatter
    "RUF002",   # mathematical Unicode in docstrings (× − ω θ τ etc.) is intentional
    "RUF003",   # same — ambiguous Unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "PLR0913", "PLR0915"]
"src/afml/config/assets.py" = ["PLR2004"]  # asset registry literals are domain data, not magic

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]
files = ["src/afml", "tests"]

[[tool.mypy.overrides]]
module = [
    "fakeredis.*",
    "numba.*",
    "scipy.*",
    "statsmodels.*",
    "pandas.*",
    "sklearn.*",
    "shap.*",
    "xgboost.*",
]
ignore_missing_imports = true
# numba's @njit decorator strips typing — accept Any return from JIT'd helpers.
# Also covers pandas .to_numpy() Any returns from rolling-window primitives.
[[tool.mypy.overrides]]
module = [
    "afml.data.ffd",
    "afml.data.bars.tick_imbalance",
    "afml.data.bars.tick_run",
    "afml.labeling.primary_alphas.cusum",
    "afml.labeling.triple_barrier",
    "afml.labeling.volatility",
    "afml.features._discretize",
    "afml.features.amihud",
    "afml.features.corwin_schultz",
    "afml.features.hasbrouck",
    "afml.features.kyle",
    "afml.features.lempel_ziv",
    "afml.features.ofi",
    "afml.features.roll",
    "afml.features.shannon",
    # Phase 5 — modules that JIT (numba) or subclass sklearn BaseEstimator
    # (which is untyped). Same misc/no-any-return/untyped-decorator triad.
    "afml.modeling.concurrency",
    "afml.modeling.sbrf",
    # Phase 8 — GSADF inner ADF / window sweep are numba-JIT'd.
    "afml.monitoring.gsadf",
]
disable_error_code = ["misc", "no-any-return", "untyped-decorator"]

# Phase 3 tests pass numpy default_rng()-derived arrays (floating[Any]) to
# feature funcs typed as NDArray[float64]; the funcs cast internally. Accept
# the looser argument type at the test boundary.
[[tool.mypy.overrides]]
module = ["tests.unit.phase3.*"]
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "phase0: Phase 0 — orchestration & alpha registry",
    "phase1: Phase 1 — structural data engineering",
    "phase2: Phase 2 — brain 1 / primary signals & labeling",
    "phase3: Phase 3 — microstructure features",
    "phase4: Phase 4 — feature selection & orthogonalization",
    "phase5: Phase 5 — brain 2 / meta-labeling",
    "phase6: Phase 6 — validation & CPCV",
    "phase7: Phase 7 — bet sizing & execution",
    "phase8: Phase 8 — MLOps / structural breaks",
    "phase9: Phase 9 — control plane",
    "m0: Operational milestone 0 — operator bootstrap (afml CLI, enroll-ceo, doctor)",
    "benchmark: performance benchmarks (skipped by default; run with --run-benchmarks)",
    "integration: cross-phase end-to-end tests (Phase 1→4 wiring; later: external Redis / MT5)",
    "slow: tests > 5s",
]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["src/afml"]
omit = ["src/afml/**/__init__.py"]
